--- a/cody/comparing-cody-vs-qodo.mdx
+++ b/cody/comparing-cody-vs-qodo.mdx
@@ -15,21 +15,21 @@ As AI-powered development tools continue to reshape how we write code, Sourcegra
 ## Feature Comparison
 
 [
-['Terminal integration', '✓', '✓'],
-['Tab completion', '✓', '✓'],
-['Language agnostic', '✓', '✓'],
-['API access', '✓', '✓'],
-['Self hostable', '✓', '✗'],
-['Test generation', '✓', '✓'],
-['Real-time completions', '✓', '✓'],
-['Usage analytics', '✓', '✓'],
-['Explanations/Chat', '✓', '✓'],
-['Full codebase context', '✓', '✓'],
-['VS Code Support', '✓', '✓'],
-['JetBrains Support', '✓', '✓'],
-['NVIM Support', '✗', '✗'],
-['Models Supported', 'LLM Integration', 'GPT-4, Claude, Gemini'],
-['Pricing', 'Free and Enterprise tiers', 'Free and Pro tiers']
+    ['Terminal integration', '✗', '✗'],
+    ['Tab completion', '✓', '✓'],
+    ['Language agnostic', '✓', '✓'],
+    ['API access', '✗', '✗'],
+    ['Self hostable', '✓', '✗'],
+    ['Test generation', '✓', '✓'],
+    ['Real-time completions', '✓', '✓'],
+    ['Usage analytics', '✗', '✗'],
+    ['Explanations/Chat', '✓', '✓'],
+    ['Full codebase context', '✓', '✓'],
+    ['VS Code Support', '✓', '✓'],
+    ['JetBrains Support', '✓', '✓'],
+    ['NVIM Support', '✗', '✗'],
+    ['Models Supported', 'GPT-4, Claude, Custom', 'Universal, Fine-tuned Models'],
+    ['Pricing', 'Free tier + Pro $9/mo', 'Free tier + Multiple plans']
 ]
 
 ## Code Completion
