--- a/cody/comparing-cody-vs-tabnine.mdx
+++ b/cody/comparing-cody-vs-tabnine.mdx
@@ -15,21 +15,21 @@ As AI-powered development tools continue to reshape how we write code, Sourcegra
 ## Feature Comparison
 
 [
-    ['Terminal integration', '✓', '✓'],
+    ['Terminal integration', '✗', '✗'],
     ['Tab completion', '✓', '✓'],
     ['Language agnostic', '✓', '✓'],
-    ['API access', '✓', '✗'],
+    ['API access', '✗', '✗'],
     ['Self hostable', '✓', '✓'],
     ['Test generation', '✓', '✓'],
     ['Real-time completions', '✓', '✓'],
-    ['Usage analytics', '✓', '✓'],
+    ['Usage analytics', '✗', '✗'],
     ['Explanations/Chat', '✓', '✓'],
     ['Full codebase context', '✓', '✓'],
     ['VS Code Support', '✓', '✓'],
     ['JetBrains Support', '✓', '✓'],
-    ['NVIM Support', '✗', '✗'],
-    ['Models Supported', 'LLM Integration', 'Universal & Fine-tuned Models'],
-    ['Pricing', 'Free and Enterprise tiers', 'Basic to Enterprise plans']
+    ['NVIM Support', '✗', '✓'],
+    ['Models Supported', 'GPT-4, Claude, Custom', 'Universal and Custom Models'],
+    ['Pricing', 'Free tier + Pro $9/mo', 'Free tier + Enterprise $39/mo']
 ]
 
 ## Code Completion
