--- a/copilot/comparing-copilot-vs-codeium.mdx
+++ b/copilot/comparing-copilot-vs-codeium.mdx
@@ -18,18 +18,18 @@ As AI-powered development tools continue to reshape how we write code, GitHub Co
     ['Terminal integration', '✓', '✓'],
     ['Tab completion', '✓', '✓'],
     ['Language agnostic', '✓', '✓'],
-    ['API access', '✓', '✓'],
-    ['Self hostable', '✗', '✗'],
+    ['API access', '✓', '✗'],
+    ['Self hostable', '✗', '✓'],
     ['Test generation', '✓', '✓'],
     ['Real-time completions', '✓', '✓'],
-    ['Usage analytics', '✓', '✓'],
+    ['Usage analytics', '✗', '✓'],
     ['Explanations/Chat', '✓', '✓'],
     ['Full codebase context', '✓', '✓'],
     ['VS Code Support', '✓', '✓'],
-    ['JetBrains Support', '✓', '✓'],
-    ['NVIM Support', '✓', '✓'],
-    ['Models Supported', 'OpenAI Codex Based', 'GPT-4o, Claude 3.5'],
-    ['Pricing', '$10/month individual', 'Free tier available']
+    ['JetBrains Support', '✓', '✗'],
+    ['NVIM Support', '✓', '✗'],
+    ['Models Supported', 'GPT-4, Custom Models', 'GPT-4o, Claude 3.5'],
+    ['Pricing', 'Individual $10/mo, Business $19/mo, Enterprise', 'Free, Pro $15/mo, Ultimate $39/mo']
 ]
 
 ## Code Completion
