--- a/copilot/comparing-copilot-vs-cody.mdx
+++ b/copilot/comparing-copilot-vs-cody.mdx
@@ -18,18 +18,18 @@ As AI-powered development tools continue to reshape how we write code, GitHub Co
     ['Terminal integration', '✓', '✗'],
     ['Tab completion', '✓', '✓'],
     ['Language agnostic', '✓', '✓'],
-    ['API access', '✓', '✓'],
+    ['API access', '✓', '✗'],
     ['Self hostable', '✗', '✓'],
     ['Test generation', '✓', '✓'],
     ['Real-time completions', '✓', '✓'],
-    ['Usage analytics', '✓', '✓'],
+    ['Usage analytics', '✗', '✗'],
     ['Explanations/Chat', '✓', '✓'],
     ['Full codebase context', '✓', '✓'],
     ['VS Code Support', '✓', '✓'],
     ['JetBrains Support', '✓', '✓'],
     ['NVIM Support', '✓', '✗'],
-    ['Models Supported', 'OpenAI Codex based', 'Multiple LLM options'],
-    ['Pricing', '$10/month individual', 'Free tier + Enterprise']
+    ['Models Supported', 'GPT-4, Custom Models', 'GPT-4, Claude, Custom'],
+    ['Pricing', 'Individual $10/mo, Business $19/mo, Enterprise', 'Free tier + Pro $9/mo']
 ]
 
 ## Code Completion
