--- a/copilot/comparing-copilot-vs-replit.mdx
+++ b/copilot/comparing-copilot-vs-replit.mdx
@@ -15,21 +15,21 @@ As AI-powered development tools continue to reshape how we write code, GitHub Co
 ## Feature Comparison
 
 [
-    ['Terminal integration', '✓', '✗'],
+    ['Terminal integration', '✓', '✓'],
     ['Tab completion', '✓', '✓'],
     ['Language agnostic', '✓', '✓'],
-    ['API access', '✓', '✗'],
+    ['API access', '✓', '✓'],
     ['Self hostable', '✗', '✗'],
     ['Test generation', '✓', '✗'],
     ['Real-time completions', '✓', '✓'],
-    ['Usage analytics', '✓', '✗'],
+    ['Usage analytics', '✗', '✗'],
     ['Explanations/Chat', '✓', '✓'],
     ['Full codebase context', '✓', '✓'],
-    ['VS Code Support', '✓', '✓'],
-    ['JetBrains Support', '✓', '✗'],
-    ['NVIM Support', '✓', '✗'],
-    ['Models Supported', 'OpenAI Codex Based', 'Replit Custom Models'],
-    ['Pricing', 'From $10/month individual', 'Free + Premium Core']
+    ['VS Code Support', '✓', '✗'],
+    ['JetBrains Support', '✓', 'N/A'],
+    ['NVIM Support', '✓', 'N/A'],
+    ['Models Supported', 'GPT-4, Custom Models', 'Claude 3.5, GPT-4o'],
+    ['Pricing', 'Individual $10/mo, Business $19/mo, Enterprise', 'Free, Core $15/mo']
 ]
 
 ## Code Completion
