--- a/cursor/comparing-cursor-vs-continue.mdx
+++ b/cursor/comparing-cursor-vs-continue.mdx
@@ -15,21 +15,21 @@ As AI-powered development tools continue to reshape how we write code, Cursor an
 ## Feature Comparison
 
 [
-    ['Terminal integration', '✓', '✗'],
-    ['Tab completion', '✓', '✓'],
-    ['Language agnostic', '✓', '✓'],
-    ['API access', '✓', '✓'],
-    ['Self hostable', '✗', '✓'],
-    ['Test generation', '✓', '✓'],
-    ['Real-time completions', '✓', '✓'],
-    ['Usage analytics', '✓', '✗'],
-    ['Explanations/Chat', '✓', '✓'],
-    ['Full codebase context', '✓', '✓'],
-    ['VS Code Support', '✓', '✓'],
-    ['JetBrains Support', '✗', '✓'],
-    ['NVIM Support', '✗', '✗'],
-    ['Models Supported', 'GPT-4, Claude, Custom Models', 'Multiple AI Models'],
-    ['Pricing', 'Free and Pro Plans', 'Free Open Source']
+   ['Terminal integration', '✓', '✗'],
+   ['Tab completion', '✓', '✓'],
+   ['Language agnostic', '✓', '✓'],
+   ['API access', '✗', '✓'],
+   ['Self hostable', '✗', '✓'],
+   ['Test generation', '✓', '✗'],
+   ['Real-time completions', '✓', '✓'],
+   ['Usage analytics', '✗', '✗'],
+   ['Explanations/Chat', '✓', '✓'],
+   ['Full codebase context', '✓', '✓'],
+   ['VS Code Support', '✓', '✓'],
+   ['JetBrains Support', '✗', '✓'],
+   ['NVIM Support', '✗', '✗'],
+   ['Models Supported', 'GPT-4, Claude, Custom', 'Universal and Custom Models'],
+   ['Pricing', 'Free tier + Pro $20/mo', 'Free tier + Enterprise plans']
 ]
 
 ## Code Completion
