--- a/cursor/comparing-cursor-vs-replit.mdx
+++ b/cursor/comparing-cursor-vs-replit.mdx
@@ -15,21 +15,21 @@ As AI-powered development tools continue to reshape how we write code, Cursor an
 ## Feature Comparison
 
 [
-    ['Terminal integration', '✓', '✓'],
-    ['Tab completion', '✓', '✓'],
-    ['Language agnostic', '✓', '✓'],
-    ['API access', '✓', '✓'],
-    ['Self hostable', '✗', '✗'],
-    ['Test generation', '✓', '✗'],
-    ['Real-time completions', '✓', '✓'],
-    ['Usage analytics', '✓', '✓'],
-    ['Explanations/Chat', '✓', '✓'],
-    ['Full codebase context', '✓', '✗'],
-    ['VS Code Support', '✓', '✗'],
-    ['JetBrains Support', '✗', '✗'],
-    ['NVIM Support', '✗', '✗'],
-    ['Models Supported', 'GPT-4, Claude, Custom', 'Proprietary AI models'],
-    ['Pricing', 'Free and $20/month', 'Free and Premium tiers']
+   ['Terminal integration', '✓', '✓'],
+   ['Tab completion', '✓', '✓'],
+   ['Language agnostic', '✓', '✓'],
+   ['API access', '✗', '✓'],
+   ['Self hostable', '✗', '✗'],
+   ['Test generation', '✓', '✗'],
+   ['Real-time completions', '✓', '✓'],
+   ['Usage analytics', '✗', '✗'],
+   ['Explanations/Chat', '✓', '✓'],
+   ['Full codebase context', '✓', '✓'],
+   ['VS Code Support', '✓', '✗'],
+   ['JetBrains Support', '✗', 'N/A'],
+   ['NVIM Support', '✗', 'N/A'],
+   ['Models Supported', 'GPT-4, Claude, Custom', 'Claude 3.5, GPT-4o'],
+   ['Pricing', 'Free tier + Pro $20/mo, 'Free, Core $15/mo']
 ]
 
 ## Code Completion
