--- a/devin/comparing-codeium-vs-devin.mdx
+++ b/devin/comparing-codeium-vs-devin.mdx
@@ -16,20 +16,20 @@ As AI-powered development tools continue to reshape how we write code, Codeium a
 
 [
     ['Terminal integration', '✓', '✓'],
-    ['Tab completion', '✓', '✓'],
+    ['Tab completion', '✓', 'N/A'],
     ['Language agnostic', '✓', '✓'],
-    ['API access', '✓', '✓'],
-    ['Self hostable', '✗', '✓'],
+    ['API access', '✗', '✓'],
+    ['Self hostable', '✓', '✗'],
     ['Test generation', '✓', '✓'],
-    ['Real-time completions', '✓', '✓'],
+    ['Real-time completions', '✓', '✗'],
     ['Usage analytics', '✓', '✓'],
     ['Explanations/Chat', '✓', '✓'],
-    ['Full codebase context', '✓', '✓'],
+    ['Full codebase context', '✓', '✗'],
     ['VS Code Support', '✓', '✓'],
-    ['JetBrains Support', '✓', '✓'],
-    ['NVIM Support', '✓', '✓'],
-    ['Models Supported', 'GPT-4o, Claude 3.5', 'Proprietary AI models'],
-    ['Pricing', 'Free and paid tiers', 'Team and Enterprise plans']
+    ['JetBrains Support', '✗', 'N/A'],
+    ['NVIM Support', '✗', 'N/A'],
+    ['Models Supported', 'OpenAI Codex Based', 'GPT-4o, Claude 3.5'],
+    ['Pricing', 'From $10/month individual', 'Team-based pricing']
 ]
 
 ## Code Completion
