--- a/devin/comparing-continue-vs-devin.mdx
+++ b/devin/comparing-continue-vs-devin.mdx
@@ -16,20 +16,20 @@ As AI-powered development tools continue to reshape how we write code, Continue 
 
 [
     ['Terminal integration', '✗', '✓'],
-    ['Tab completion', '✓', '✓'],
+    ['Tab completion', '✓', 'N/A'],
     ['Language agnostic', '✓', '✓'],
     ['API access', '✓', '✓'],
     ['Self hostable', '✓', '✗'],
-    ['Test generation', '✓', '✓'],
-    ['Real-time completions', '✓', '✓'],
+    ['Test generation', '✗', '✓'],
+    ['Real-time completions', '✓', '✗'],
     ['Usage analytics', '✗', '✓'],
     ['Explanations/Chat', '✓', '✓'],
-    ['Full codebase context', '✓', '✓'],
+    ['Full codebase context', '✓', '✗'],
     ['VS Code Support', '✓', '✓'],
-    ['JetBrains Support', '✓', '✗'],
-    ['NVIM Support', '✗', '✗'],
-    ['Models Supported', 'Multiple AI Models', 'Proprietary AI Model'],
-    ['Pricing', 'Free Open Source', 'Teams & Enterprise Plans']
+    ['JetBrains Support', '✓', 'N/A'],
+    ['NVIM Support', '✗', 'N/A'],
+    ['Models Supported', 'Universal and Custom Models', 'Custom Cognition Models'],
+    ['Pricing', 'Free tier + Enterprise plans', 'Team-based pricing']
 ]
 
 ## Code Completion
