--- a/devin/comparing-cursor-vs-devin.mdx
+++ b/devin/comparing-cursor-vs-devin.mdx
@@ -15,22 +15,22 @@ As AI-powered development tools continue to reshape how we write code, Cursor an
 ## Feature Comparison
 
 [
-    ['Terminal integration', '✓', '✓'],
-    ['Tab completion', '✓', '✗'],
-    ['Language agnostic', '✓', '✓'],
-    ['API access', '✓', '✓'],
-    ['Self hostable', '✗', '✗'],
-    ['Test generation', '✓', '✓'],
-    ['Real-time completions', '✓', '✗'],
-    ['Usage analytics', '✓', '✓'],
-    ['Explanations/Chat', '✓', '✓'],
-    ['Full codebase context', '✓', '✓'],
-    ['VS Code Support', '✓', '✓'],
-    ['JetBrains Support', '✗', '✗'],
-    ['NVIM Support', '✗', '✗'],
-    ['Models Supported', 'GPT-4, Claude, Custom', 'Custom AI Model'],
-    ['Pricing', 'Free and $20/month', 'Team-based pricing']
-]
+      ['Terminal integration', '✓', '✓'],
+      ['Tab completion', '✓', 'N/A'],
+      ['Language agnostic', '✓', '✓'],
+      ['API access', '✗', '✓'],
+      ['Self hostable', '✗', '✗'],
+      ['Test generation', '✓', '✓'],
+      ['Real-time completions', '✓', '✗'],
+      ['Usage analytics', '✗', '✓'],
+      ['Explanations/Chat', '✓', '✓'],
+      ['Full codebase context', '✓', '✗'],
+      ['VS Code Support', '✓', '✓'],
+      ['JetBrains Support', '✗', 'N/A'],
+      ['NVIM Support', '✗', 'N/A'],
+      ['Models Supported', 'GPT-4, Claude, Custom', 'Custom Cognition Models'],
+      ['Pricing', 'Free tier + Pro $20/mo', 'Team-based pricing']
+   ]
 
 ## Code Completion
 
