--- a/devin/comparing-qodo-vs-devin.mdx
+++ b/devin/comparing-qodo-vs-devin.mdx
@@ -15,21 +15,21 @@ As AI-powered development tools continue to reshape how we write code, Qodo Gen 
 ## Feature Comparison
 
 [
-['Terminal integration', '✓', '✓'],
-['Tab completion', '✓', '✓'],
-['Language agnostic', '✓', '✓'],
-['API access', '✓', '✓'],
-['Self hostable', '✗', '✓'],
-['Test generation', '✓', '✓'],
-['Real-time completions', '✓', '✓'],
-['Usage analytics', '✓', '✓'],
-['Explanations/Chat', '✓', '✓'],
-['Full codebase context', '✓', '✓'],
-['VS Code Support', '✓', '✓'],
-['JetBrains Support', '✓', '✗'],
-['NVIM Support', '✗', '✗'],
-['Models Supported', 'GPT-4, Claude, Gemini', 'Custom AI Model'],
-['Pricing', 'Free and Pro plans', 'Team and Enterprise plans']
+    ['Terminal integration', '✗', '✓'],
+    ['Tab completion', '✓', 'N/A'],
+    ['Language agnostic', '✓', '✓'],
+    ['API access', '✗', '✓'],
+    ['Self hostable', '✗', '✗'],
+    ['Test generation', '✓', '✓'],
+    ['Real-time completions', '✓', '✗'],
+    ['Usage analytics', '✗', '✓'],
+    ['Explanations/Chat', '✓', '✓'],
+    ['Full codebase context', '✓', '✗'],
+    ['VS Code Support', '✓', '✓'],
+    ['JetBrains Support', '✓', 'N/A'],
+    ['NVIM Support', '✗', 'N/A'],
+    ['Models Supported', 'GPT-4, Claude 3.5, Gemini', 'Custom Cognition Models'],
+    ['Pricing', 'From $10/month individual', 'Team-based pricing']
 ]
 
 ## Code Completion
@@ -69,7 +69,6 @@ Devin offers enterprise-grade security with SOC 2 Type II certification, data en
 ### Qodo Gen
 - **Free Tier**: Basic features for individual developers
 - **Pro Tier**: Enhanced functionality including AI-assisted code completion
-(Note: Exact pricing not provided in documentation)
 
 ### Devin
 - **Teams Plan**: 
@@ -84,7 +83,6 @@ Devin offers enterprise-grade security with SOC 2 Type II certification, data en
   - Custom data retention
   - VPC deployment
   - Usage analytics
-(Note: Exact pricing not provided in documentation)
 
 ## Conclusion
 
