--- a/devin/comparing-tabnine-vs-devin.mdx
+++ b/devin/comparing-tabnine-vs-devin.mdx
@@ -14,23 +14,23 @@ As AI-powered development tools continue to reshape how we write code, Tabnine a
 
 ## Feature Comparison
 
-| Feature | Tabnine | Devin |
-|---------|---------|-------|
-| Terminal integration | ✓ | ✓ |
-| Tab completion | ✓ | ✗ |
-| Language agnostic | ✓ | ✓ |
-| API access | ✓ | ✓ |
-| Self hostable | ✓ | ✗ |
-| Test generation | ✓ | ✓ |
-| Real-time completions | ✓ | ✓ |
-| Usage analytics | ✓ | ✓ |
-| Explanations/Chat | ✓ | ✓ |
-| Full codebase context | ✓ | ✓ |
-| VS Code Support | ✓ | ✓ |
-| JetBrains Support | ✓ | ✗ |
-| NVIM Support | ✓ | ✗ |
-| Models Supported | Private & Universal Models | Proprietary AI Models |
-| Pricing | Multiple tiers available | Team & Enterprise Plans |
+[
+    ['Terminal integration', '✗', '✓'],
+    ['Tab completion', '✓', 'N/A'],
+    ['Language agnostic', '✓', '✓'],
+    ['API access', '✗', '✓'],
+    ['Self hostable', '✓', '✗'],
+    ['Test generation', '✓', '✓'],
+    ['Real-time completions', '✓', '✗'],
+    ['Usage analytics', '✗', '✓'],
+    ['Explanations/Chat', '✓', '✓'],
+    ['Full codebase context', '✓', '✗'],
+    ['VS Code Support', '✓', '✓'],
+    ['JetBrains Support', '✓', 'N/A'],
+    ['NVIM Support', '✓', 'N/A'],
+    ['Models Supported', 'Universal and Custom Models', 'Custom Cognition Models'],
+    ['Pricing', 'Free tier + Enterprise $39/mo', 'Team-based pricing']
+]
 
 ## Code Completion
 
