--- a/others/comparing-codeium-vs-qodo.mdx
+++ b/others/comparing-codeium-vs-qodo.mdx
@@ -14,22 +14,22 @@ As AI-powered development tools continue to reshape how we write code, Codeium a
 
 ## Feature Comparison
 
-   [
+   [ 
       ['Terminal integration', '✓', '✗'],
       ['Tab completion', '✓', '✓'],
       ['Language agnostic', '✓', '✓'],
-      ['API access', '✓', '✓'],
-      ['Self hostable', '✗', '✗'],
-      ['Test generation', '✗', '✓'],
+      ['API access', '✗', '✗'],
+      ['Self hostable', '✓', '✗'],
+      ['Test generation', '✓', '✓'],
       ['Real-time completions', '✓', '✓'],
-      ['Usage analytics', '✓', '✓'],
+      ['Usage analytics', '✓', '✗'],
       ['Explanations/Chat', '✓', '✓'],
       ['Full codebase context', '✓', '✓'],
       ['VS Code Support', '✓', '✓'],
-      ['JetBrains Support', '✓', '✓'],
-      ['NVIM Support', '✓', '✗'],
-      ['Models Supported', 'GPT-4o, Claude 3.5', 'GPT-4.0, Claude, Gemini'],
-      ['Pricing', 'Free and Pro plans', 'Free and Pro tiers']
+      ['JetBrains Support', '✗', '✓'],
+      ['NVIM Support', '✗', '✗'],
+      ['Models Supported', 'GPT-4o, Claude 3.5', 'GPT-4, Claude 3.5, Gemini'],
+      ['Pricing', 'Free, Pro $15/mo, Ultimate $39/mo', 'Free, Team $19/mo, Enterprise']
    ]
 
 ## Code Completion
