--- a/others/comparing-codeium-vs-replit.mdx
+++ b/others/comparing-codeium-vs-replit.mdx
@@ -18,18 +18,18 @@ As AI-powered development tools continue to reshape how we write code, Codeium a
       ['Terminal integration', '✓', '✓'],
       ['Tab completion', '✓', '✓'],
       ['Language agnostic', '✓', '✓'],
-      ['API access', '✓', '✓'],
-      ['Self hostable', '✗', '✗'],
+      ['API access', '✗', '✓'],
+      ['Self hostable', '✓', '✗'],
       ['Test generation', '✓', '✗'],
       ['Real-time completions', '✓', '✓'],
-      ['Usage analytics', '✓', '✓'],
+      ['Usage analytics', '✓', '✗'],
       ['Explanations/Chat', '✓', '✓'],
       ['Full codebase context', '✓', '✓'],
-      ['VS Code Support', '✓', '✓'],
-      ['JetBrains Support', '✓', '✗'],
-      ['NVIM Support', '✓', '✗'],
-      ['Models Supported', 'GPT-4o, Claude 3.5', 'Custom Replit Models'],
-      ['Pricing', 'Free to Pro Ultimate', 'Free to Core Premium']
+      ['VS Code Support', '✓', '✗'],
+      ['JetBrains Support', '✗', 'N/A'],
+      ['NVIM Support', '✗', 'N/A'],
+      ['Models Supported', 'GPT-4o, Claude 3.5', 'Claude 3.5, GPT-4o'],
+      ['Pricing', 'Free, Pro $15/mo, Ultimate $39/mo', 'Free, Core $15/mo']
    ]
 
 ## Code Completion
