--- a/others/comparing-continue-vs-replit.mdx
+++ b/others/comparing-continue-vs-replit.mdx
@@ -15,21 +15,21 @@ As AI-powered development tools continue to reshape how we write code, Continue 
 ## Feature Comparison
 
 [
-    ['Terminal integration', '✓', '✓'],
+    ['Terminal integration', '✗', '✓'],
     ['Tab completion', '✓', '✓'],
     ['Language agnostic', '✓', '✓'],
     ['API access', '✓', '✓'],
     ['Self hostable', '✓', '✗'],
-    ['Test generation', '✓', '✗'],
+    ['Test generation', '✗', '✗'],
     ['Real-time completions', '✓', '✓'],
-    ['Usage analytics', '✓', '✓'],
+    ['Usage analytics', '✗', '✗'],
     ['Explanations/Chat', '✓', '✓'],
     ['Full codebase context', '✓', '✓'],
     ['VS Code Support', '✓', '✗'],
-    ['JetBrains Support', '✓', '✗'],
-    ['NVIM Support', '✓', '✗'],
-    ['Models Supported', 'Multiple AI Models', 'Proprietary AI Model'],
-    ['Pricing', 'Free Open Source', 'Free and Premium Plans']
+    ['JetBrains Support', '✓', 'N/A'],
+    ['NVIM Support', '✗', 'N/A'],
+    ['Models Supported', 'Universal and Custom Models', 'Claude 3.5, GPT-4o'],
+    ['Pricing', 'Free tier + Enterprise plans', 'Free, Core $15/mo']
 ]
 
 ## Code Completion
