--- a/tabnine/comparing-tabnine-vs-codeium.mdx
+++ b/tabnine/comparing-tabnine-vs-codeium.mdx
@@ -15,21 +15,21 @@ As AI-powered development tools continue to reshape how we write code, Tabnine a
 ## Feature Comparison
 
 [
-    ['Terminal integration', '✓', '✓'],
+    ['Terminal integration', '✗', '✓'],
     ['Tab completion', '✓', '✓'],
     ['Language agnostic', '✓', '✓'],
-    ['API access', '✓', '✓'],
-    ['Self hostable', '✓', '✗'],
-    ['Test generation', '✗', '✓'],
+    ['API access', '✗', '✗'],
+    ['Self hostable', '✓', '✓'],
+    ['Test generation', '✓', '✓'],
     ['Real-time completions', '✓', '✓'],
-    ['Usage analytics', '✓', '✓'],
+    ['Usage analytics', '✗', '✓'],
     ['Explanations/Chat', '✓', '✓'],
     ['Full codebase context', '✓', '✓'],
     ['VS Code Support', '✓', '✓'],
-    ['JetBrains Support', '✓', '✓'],
-    ['NVIM Support', '✓', '✓'],
-    ['Models Supported', 'Universal and Fine-tuned', 'GPT-4o and Claude 3.5'],
-    ['Pricing', 'Tiered with Enterprise', 'Credits-based system']
+    ['JetBrains Support', '✓', '✗'],
+    ['NVIM Support', '✓', '✗'],
+    ['Models Supported', 'Universal and Custom Models', 'GPT-4o, Claude 3.5'],
+    ['Pricing', 'Free tier + Enterprise $39/mo', 'Free, Pro $15/mo, Ultimate $39/mo']
 ]
 
 ## Code Completion
