--- a/tabnine/comparing-tabnine-vs-continue.mdx
+++ b/tabnine/comparing-tabnine-vs-continue.mdx
@@ -15,21 +15,21 @@ As AI-powered development tools continue to reshape how we write code, Tabnine a
 ## Feature Comparison
 
 [
-    ['Terminal integration', '✓', '✗'],
+    ['Terminal integration', '✗', '✗'],
     ['Tab completion', '✓', '✓'],
     ['Language agnostic', '✓', '✓'],
-    ['API access', '✓', '✓'],
+    ['API access', '✗', '✓'],
     ['Self hostable', '✓', '✓'],
-    ['Test generation', '✓', '✓'],
+    ['Test generation', '✓', '✗'],
     ['Real-time completions', '✓', '✓'],
-    ['Usage analytics', '✓', '✗'],
+    ['Usage analytics', '✗', '✗'],
     ['Explanations/Chat', '✓', '✓'],
     ['Full codebase context', '✓', '✓'],
     ['VS Code Support', '✓', '✓'],
     ['JetBrains Support', '✓', '✓'],
     ['NVIM Support', '✓', '✗'],
-    ['Models Supported', 'Private Universal Models', 'Multiple LLMs & Custom'],
-    ['Pricing', 'Free to Enterprise', 'Free (model costs vary)']
+    ['Models Supported', 'Universal and Custom Models', 'Universal and Custom Models'],
+    ['Pricing', 'Free tier + Enterprise $39/mo', 'Free tier + Enterprise plans']
 ]
 
 ## Code Completion
