--- a/tabnine/comparing-tabnine-vs-replit.mdx
+++ b/tabnine/comparing-tabnine-vs-replit.mdx
@@ -15,21 +15,21 @@ As AI-powered development tools continue to reshape how we write code, Tabnine a
 ## Feature Comparison
 
 [
-    ['Terminal integration', '✓', '✓'],
+    ['Terminal integration', '✗', '✓'],
     ['Tab completion', '✓', '✓'],
     ['Language agnostic', '✓', '✓'],
-    ['API access', '✓', '✗'],
+    ['API access', '✗', '✓'],
     ['Self hostable', '✓', '✗'],
     ['Test generation', '✓', '✗'],
     ['Real-time completions', '✓', '✓'],
-    ['Usage analytics', '✓', '✓'],
+    ['Usage analytics', '✗', '✗'],
     ['Explanations/Chat', '✓', '✓'],
     ['Full codebase context', '✓', '✓'],
     ['VS Code Support', '✓', '✗'],
-    ['JetBrains Support', '✓', '✗'],
-    ['NVIM Support', '✓', '✗'],
-    ['Models Supported', 'Universal and Custom Models', 'Built-in AI Models'],
-    ['Pricing', 'Free to Enterprise', 'Free to Core Premium']
+    ['JetBrains Support', '✓', 'N/A'],
+    ['NVIM Support', '✓', 'N/A'],
+    ['Models Supported', 'Universal and Custom Models', 'Claude 3.5, GPT-4o'],
+    ['Pricing', 'Free tier + Enterprise $39/mo', 'Free, Core $15/mo']
 ]
 
 ## Code Completion
