--- a/cody/comparing-cody-vs-codeium.mdx
+++ b/cody/comparing-cody-vs-codeium.mdx
@@ -15,21 +15,21 @@ As AI-powered development tools continue to reshape how we write code, Sourcegra
 ## Feature Comparison
 
 [
-    ['Terminal integration', '✓', '✓'],
+    ['Terminal integration', '✗', '✓'],
     ['Tab completion', '✓', '✓'],
     ['Language agnostic', '✓', '✓'],
-    ['API access', '✓', '✓'],
-    ['Self hostable', '✓', '✗'],
+    ['API access', '✗', '✗'],
+    ['Self hostable', '✓', '✓'],
     ['Test generation', '✓', '✓'],
     ['Real-time completions', '✓', '✓'],
-    ['Usage analytics', '✓', '✓'],
+    ['Usage analytics', '✗', '✓'],
     ['Explanations/Chat', '✓', '✓'],
     ['Full codebase context', '✓', '✓'],
     ['VS Code Support', '✓', '✓'],
-    ['JetBrains Support', '✓', '✓'],
-    ['NVIM Support', '✗', '✓'],
-    ['Models Supported', 'Enterprise LLM integration', 'GPT-4o, Claude 3.5'],
-    ['Pricing', 'Free and Enterprise tiers', 'Free to Pro Ultimate']
+    ['JetBrains Support', '✓', '✗'],
+    ['NVIM Support', '✗', '✗'],
+    ['Models Supported', 'GPT-4, Claude 3.5, Custom', 'GPT-4o, Claude 3.5'],
+    ['Pricing', 'Free tier + Pro $9/mo', 'Free, Pro $15/mo, Ultimate $39/mo']
 ]
 
 ## Code Completion
