--- a/cody/comparing-cody-vs-continue.mdx
+++ b/cody/comparing-cody-vs-continue.mdx
@@ -14,23 +14,23 @@ As AI-powered development tools continue to reshape how we write code, Sourcegra
 
 ## Feature Comparison
 
-   [ 
-      ['Terminal integration', '✓', '✓'],
-      ['Tab completion', '✓', '✓'],
-      ['Language agnostic', '✓', '✓'],
-      ['API access', '✓', '✓'],
-      ['Self hostable', '✗', '✓'],
-      ['Test generation', '✓', '✓'],
-      ['Real-time completions', '✓', '✓'],
-      ['Usage analytics', '✓', '✗'],
-      ['Explanations/Chat', '✓', '✓'],
-      ['Full codebase context', '✓', '✓'],
-      ['VS Code Support', '✓', '✓'],
-      ['JetBrains Support', '✓', '✓'],
-      ['NVIM Support', '✗', '✓'],
-      ['Models Supported', 'Proprietary LLM', 'Multiple AI Models'],
-      ['Pricing', 'Free/Pro/Enterprise Tiers', 'Free Open Source']
-   ]
+[
+    ['Terminal integration', '✗', '✗'],
+    ['Tab completion', '✓', '✓'],
+    ['Language agnostic', '✓', '✓'],
+    ['API access', '✗', '✓'],
+    ['Self hostable', '✓', '✓'],
+    ['Test generation', '✓', '✗'],
+    ['Real-time completions', '✓', '✓'],
+    ['Usage analytics', '✗', '✗'],
+    ['Explanations/Chat', '✓', '✓'],
+    ['Full codebase context', '✓', '✓'],
+    ['VS Code Support', '✓', '✓'],
+    ['JetBrains Support', '✓', '✓'],
+    ['NVIM Support', '✗', '✗'],
+    ['Models Supported', 'GPT-4, Claude, Custom', 'Universal and Custom Models'],
+    ['Pricing', 'Free tier + Pro $9/mo', 'Free tier + Enterprise plans']
+]
 
 ## Code Completion
 
