--- a/copilot/comparing-copilot-vs-qodo.mdx
+++ b/copilot/comparing-copilot-vs-qodo.mdx
@@ -14,23 +14,23 @@ As AI-powered development tools continue to reshape how we write code, GitHub Co
 
 ## Feature Comparison
 
-   [ 
-      ['Terminal integration', '✓', '✗'],
-      ['Tab completion', '✓', '✓'],
-      ['Language agnostic', '✓', '✓'],
-      ['API access', '✓', '✓'],
-      ['Self hostable', '✗', '✗'],
-      ['Test generation', '✗', '✓'],
-      ['Real-time completions', '✓', '✓'],
-      ['Usage analytics', '✓', '✓'],
-      ['Explanations/Chat', '✓', '✓'],
-      ['Full codebase context', '✓', '✓'],
-      ['VS Code Support', '✓', '✓'],
-      ['JetBrains Support', '✓', '✓'],
-      ['NVIM Support', '✓', '✗'],
-      ['Models Supported', 'OpenAI Codex', 'GPT-4, Claude, Gemini'],
-      ['Pricing', '$10/month individual', 'Free tier + Pro plans']
-   ]
+[
+    ['Terminal integration', '✓', '✗'],
+    ['Tab completion', '✓', '✓'],
+    ['Language agnostic', '✓', '✓'],
+    ['API access', '✓', '✗'],
+    ['Self hostable', '✗', '✗'],
+    ['Test generation', '✓', '✓'],
+    ['Real-time completions', '✓', '✓'],
+    ['Usage analytics', '✗', '✗'],
+    ['Explanations/Chat', '✓', '✓'],
+    ['Full codebase context', '✓', '✓'],
+    ['VS Code Support', '✓', '✓'],
+    ['JetBrains Support', '✓', '✓'],
+    ['NVIM Support', '✓', '✗'],
+    ['Models Supported', 'GPT-4, Custom Models', 'GPT-4, Claude 3.5, Gemini'],
+    ['Pricing', 'Individual $10/mo, Business $19/mo, Enterprise', 'From $10/month individual']
+]
 
 ## Code Completion
 
