--- a/copilot/comparing-copilot-vs-tabnine.mdx
+++ b/copilot/comparing-copilot-vs-tabnine.mdx
@@ -15,21 +15,21 @@ As AI-powered development tools continue to reshape how we write code, GitHub Co
 ## Feature Comparison
 
 [
-   ['Terminal integration', '✓', '✓'],
-   ['Tab completion', '✓', '✓'],
-   ['Language agnostic', '✓', '✓'],
-   ['API access', '✓', '✓'],
-   ['Self hostable', '✗', '✓'],
-   ['Test generation', '✓', '✓'],
-   ['Real-time completions', '✓', '✓'],
-   ['Usage analytics', '✓', '✓'],
-   ['Explanations/Chat', '✓', '✓'],
-   ['Full codebase context', '✓', '✓'],
-   ['VS Code Support', '✓', '✓'],
-   ['JetBrains Support', '✓', '✓'],
-   ['NVIM Support', '✓', '✗'],
-   ['Models Supported', 'OpenAI Codex Based', 'Private Universal Models'],
-   ['Pricing', '$10/month individual', '$12/month individual']
+    ['Terminal integration', '✓', '✗'],
+    ['Tab completion', '✓', '✓'],
+    ['Language agnostic', '✓', '✓'],
+    ['API access', '✓', '✗'],
+    ['Self hostable', '✗', '✓'],
+    ['Test generation', '✓', '✓'],
+    ['Real-time completions', '✓', '✓'],
+    ['Usage analytics', '✗', '✗'],
+    ['Explanations/Chat', '✓', '✓'],
+    ['Full codebase context', '✓', '✓],
+    ['VS Code Support', '✓', '✓'],
+    ['JetBrains Support', '✓', '✓'],
+    ['NVIM Support', '✓', '✓'],
+    ['Models Supported', 'GPT-4, Custom Models', 'Universal and Custom Models'],
+    ['Pricing', 'Individual $10/mo, Business $19/mo, Enterprise', 'Free tier + Enterprise $39/mo]
 ]
 
 ## Code Completion
