--- a/cursor/comparing-cursor-vs-codeium.mdx
+++ b/cursor/comparing-cursor-vs-codeium.mdx
@@ -18,18 +18,18 @@ As AI-powered development tools continue to reshape how we write code, Cursor an
    ['Terminal integration', '✓', '✓'],
    ['Tab completion', '✓', '✓'],
    ['Language agnostic', '✓', '✓'],
-   ['API access', '✓', '✓'],
-   ['Self hostable', '✗', '✗'],
+   ['API access', '✗', '✗'],
+   ['Self hostable', '✗', '✓'],
    ['Test generation', '✓', '✓'],
    ['Real-time completions', '✓', '✓'],
-   ['Usage analytics', '✓', '✓'],
+   ['Usage analytics', '✗', '✓'],
    ['Explanations/Chat', '✓', '✓'],
    ['Full codebase context', '✓', '✓'],
    ['VS Code Support', '✓', '✓'],
-   ['JetBrains Support', '✗', '✓'],
-   ['NVIM Support', '✗', '✓'],
-   ['Models Supported', 'GPT-4, Claude, Custom', 'GPT-4, Custom Models'],
-   ['Pricing', 'Free/Pro from $20/mo', 'Free/Pro from $12/mo']
+   ['JetBrains Support', '✗', '✗'],
+   ['NVIM Support', '✗', '✗'],
+   ['Models Supported', 'GPT-4, Claude 3.5, Custom', 'GPT-4o, Claude 3.5'],
+   ['Pricing', 'Free tier + Pro $20/mo', 'Free, Pro $15/mo, Ultimate $39/mo']
 ]
 
 ## Code Completion
