--- a/cursor/comparing-cursor-vs-cody.mdx
+++ b/cursor/comparing-cursor-vs-cody.mdx
@@ -1,4 +1,3 @@
-
 ---
 title: 'Cursor vs. Sourcegraph Cody: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
@@ -16,21 +15,21 @@ As AI-powered development tools continue to reshape how we write code, Cursor an
 ## Feature Comparison
 
 [
-['Terminal integration', '✓', '✗'],
-['Tab completion', '✓', '✓'],
-['Language agnostic', '✓', '✓'],
-['API access', '✓', '✓'],
-['Self hostable', '✗', '✓'],
-['Test generation', '✓', '✓'],
-['Real-time completions', '✓', '✓'],
-['Usage analytics', '✓', '✓'],
-['Explanations/Chat', '✓', '✓'],
-['Full codebase context', '✓', '✓'],
-['VS Code Support', '✓', '✓'],
-['JetBrains Support', '✗', '✓'],
-['NVIM Support', '✗', '✗'],
-['Models Supported', 'GPT-4, Claude, Custom', 'Proprietary AI Models'],
-['Pricing', 'Free and $20/month', 'Free and Enterprise']
+   ['Terminal integration', '✓', '✗'],
+   ['Tab completion', '✓', '✓'],
+   ['Language agnostic', '✓', '✓'],
+   ['API access', '✗', '✗'],
+   ['Self hostable', '✗', '✓'],
+   ['Test generation', '✓', '✓'],
+   ['Real-time completions', '✓', '✓'],
+   ['Usage analytics', '✗', '✗'],
+   ['Explanations/Chat', '✓', '✓'],
+   ['Full codebase context', '✓', '✓'],
+   ['VS Code Support', '✓', '✓'],
+   ['JetBrains Support', '✗', '✓'],
+   ['NVIM Support', '✗', '✗'],
+   ['Models Supported', 'GPT-4, Claude, Custom', 'GPT-4, Claude, Custom'],
+   ['Pricing', 'Free tier + Pro $20/mo', 'Free tier + Pro $9/mo']
 ]
 
 ## Code Completion
