--- a/cursor/comparing-cursor-vs-qodo.mdx
+++ b/cursor/comparing-cursor-vs-qodo.mdx
@@ -14,23 +14,23 @@ As AI-powered development tools continue to reshape how we write code, Cursor an
 
 ## Feature Comparison
 
-   [ 
-      ['Terminal integration', '✓', '✗'],
-      ['Tab completion', '✓', '✓'],
-      ['Language agnostic', '✓', '✓'],
-      ['API access', '✓', '✓'],
-      ['Self hostable', '✗', '✗'],
-      ['Test generation', '✗', '✓'],
-      ['Real-time completions', '✓', '✓'],
-      ['Usage analytics', '✓', '✓'],
-      ['Explanations/Chat', '✓', '✓'],
-      ['Full codebase context', '✓', '✓'],
-      ['VS Code Support', '✓', '✓'],
-      ['JetBrains Support', '✗', '✓'],
-      ['NVIM Support', '✗', '✗'],
-      ['Models Supported', 'GPT-4, Claude, Custom', 'GPT-4, Claude, Gemini'],
-      ['Pricing', 'Free and $20/month', 'Free and Pro tiers']
-   ]
+[
+   ['Terminal integration', '✓', '✗'],
+   ['Tab completion', '✓', '✓'],
+   ['Language agnostic', '✓', '✓'],
+   ['API access', '✗', '✗'],
+   ['Self hostable', '✗', '✗'],
+   ['Test generation', '✓', '✓'],
+   ['Real-time completions', '✓', '✓'],
+   ['Usage analytics', '✗', '✗'],
+   ['Explanations/Chat', '✓', '✓'],
+   ['Full codebase context', '✓', '✓'],
+   ['VS Code Support', '✓', '✓'],
+   ['JetBrains Support', '✗', '✓'],
+   ['NVIM Support', '✗', '✗'],
+   ['Models Supported', 'GPT-4, Claude, Custom', 'GPT-4, Claude 3.5, Gemini'],
+   ['Pricing', 'Free tier + Pro $20/mo', 'From $10/month individual']
+]
 
 ## Code Completion
 
