--- a/cursor/comparing-cursor-vs-tabnine.mdx
+++ b/cursor/comparing-cursor-vs-tabnine.mdx
@@ -15,22 +15,23 @@ As AI-powered development tools continue to reshape how we write code, Cursor an
 ## Feature Comparison
 
 [
-    ['Terminal integration', '✓', '✓'],
-    ['Tab completion', '✓', '✓'],
-    ['Language agnostic', '✓', '✓'],
-    ['API access', '✓', '✓'],
-    ['Self hostable', '✗', '✓'],
-    ['Test generation', '✓', '✗'],
-    ['Real-time completions', '✓', '✓'],
-    ['Usage analytics', '✓', '✓'],
-    ['Explanations/Chat', '✓', '✓'],
-    ['Full codebase context', '✓', '✓'],
-    ['VS Code Support', '✓', '✓'],
-    ['JetBrains Support', '✗', '✓'],
-    ['NVIM Support', '✗', '✓'],
-    ['Models Supported', 'GPT-4, Claude, Custom', 'Universal, Fine-tuned Models'],
-    ['Pricing', 'Free tier + Pro $20/mo', 'Free tier + Multiple plans']
+   ['Terminal integration', '✓', '✗'],
+   ['Tab completion', '✓', '✓'],
+   ['Language agnostic', '✓', '✓'],
+   ['API access', '✗', '✗'],
+   ['Self hostable', '✗', '✓'],
+   ['Test generation', '✓', '✓'],
+   ['Real-time completions', '✓', '✓'],
+   ['Usage analytics', '✗', '✗'],
+   ['Explanations/Chat', '✓', '✓'],
+   ['Full codebase context', '✓', '✓'],
+   ['VS Code Support', '✓', '✓'],
+   ['JetBrains Support', '✗', '✓'],
+   ['NVIM Support', '✗', '✓'],
+   ['Models Supported', 'GPT-4, Claude, Custom', 'Universal and Custom Models'],
+   ['Pricing', 'Free tier + Pro $20/mo', 'Free tier + Enterprise $39/mo']
 ]
+
 
 ## Code Completion
 
