--- a/devin/comparing-cody-vs-devin.mdx
+++ b/devin/comparing-cody-vs-devin.mdx
@@ -15,21 +15,21 @@ As AI-powered development tools continue to reshape how we write code, Sourcegra
 ## Feature Comparison
 
 [
-['Terminal integration', '✗', '✓'],
-['Tab completion', '✓', '✓'],
-['Language agnostic', '✓', '✓'],
-['API access', '✓', '✓'],
-['Self hostable', '✓', '✗'],
-['Test generation', '✓', '✓'],
-['Real-time completions', '✓', '✓'],
-['Usage analytics', '✓', '✓'],
-['Explanations/Chat', '✓', '✓'],
-['Full codebase context', '✓', '✓'],
-['VS Code Support', '✓', '✓'],
-['JetBrains Support', '✓', '✗'],
-['NVIM Support', '✗', '✗'],
-['Models Supported', 'LLM Integration', 'Custom AI Model'],
-['Pricing', 'Free and Enterprise tiers', 'Teams and Enterprise plans']
+    ['Terminal integration', '✗', '✓'],
+    ['Tab completion', '✓', 'N/A'],
+    ['Language agnostic', '✓', '✓'],
+    ['API access', '✗', '✓'],
+    ['Self hostable', '✓', '✗'],
+    ['Test generation', '✓', '✓'],
+    ['Real-time completions', '✓', '✗'],
+    ['Usage analytics', '✗', '✓'],
+    ['Explanations/Chat', '✓', '✓'],
+    ['Full codebase context', '✓', '✗'],
+    ['VS Code Support', '✓', '✓'],
+    ['JetBrains Support', '✓', 'N/A'],
+    ['NVIM Support', '✗', 'N/A'],
+    ['Models Supported', 'GPT-4, Claude, Custom', 'Custom Cognition Models'],
+    ['Pricing', 'Free tier + Pro $9/mo', 'Team-based pricing']
 ]
 
 ## Code Completion
