--- a/devin/comparing-copilot-vs-devin.mdx
+++ b/devin/comparing-copilot-vs-devin.mdx
@@ -14,23 +14,23 @@ As AI-powered development tools continue to reshape how we write code, GitHub Co
 
 ## Feature Comparison
 
-   [
-      ['Terminal integration', '✓', '✓'],
-      ['Tab completion', '✓', '✓'],
-      ['Language agnostic', '✓', '✓'],
-      ['API access', '✓', '✓'],
-      ['Self hostable', '✗', '✓'],
-      ['Test generation', '✓', '✓'],
-      ['Real-time completions', '✓', '✗'],
-      ['Usage analytics', '✓', '✓'],
-      ['Explanations/Chat', '✓', '✓'],
-      ['Full codebase context', '✓', '✓'],
-      ['VS Code Support', '✓', '✓'],
-      ['JetBrains Support', '✓', '✗'],
-      ['NVIM Support', '✓', '✗'],
-      ['Models Supported', 'OpenAI Codex Based', 'Custom Cognition Models'],
-      ['Pricing', 'From $10/month individual', 'Team-based pricing']
-   ]
+[
+    ['Terminal integration', '✓', '✓'],
+    ['Tab completion', '✓', 'N/A'],
+    ['Language agnostic', '✓', '✓'],
+    ['API access', '✓', '✓'],
+    ['Self hostable', '✗', '✗'],
+    ['Test generation', '✓', '✓'],
+    ['Real-time completions', '✓', '✗'],
+    ['Usage analytics', '✗', '✓'],
+    ['Explanations/Chat', '✓', '✓'],
+    ['Full codebase context', '✓', '✗'],
+    ['VS Code Support', '✓', '✓'],
+    ['JetBrains Support', '✓', 'N/A'],
+    ['NVIM Support', '✓', 'N/A'],
+    ['Models Supported', 'GPT-4, Custom Models', 'Custom Cognition Models'],
+    ['Pricing', 'Individual $10/mo, Business $19/mo, Enterprise', 'Team-based pricing']
+]
 
 ## Code Completion
 
