--- a/others/comparing-codeium-vs-continue.mdx
+++ b/others/comparing-codeium-vs-continue.mdx
@@ -18,18 +18,18 @@ As AI-powered development tools continue to reshape how we write code, Codeium a
       ['Terminal integration', '✓', '✗'],
       ['Tab completion', '✓', '✓'],
       ['Language agnostic', '✓', '✓'],
-      ['API access', '✓', '✓'],
-      ['Self hostable', '✗', '✓'],
-      ['Test generation', '✓', '✓'],
+      ['API access', '✗', '✓'],
+      ['Self hostable', '✓', '✓'],
+      ['Test generation', '✓', '✗'],
       ['Real-time completions', '✓', '✓'],
-      ['Usage analytics', '✓', '✓'],
+      ['Usage analytics', '✓', '✗'],
       ['Explanations/Chat', '✓', '✓'],
       ['Full codebase context', '✓', '✓'],
       ['VS Code Support', '✓', '✓'],
-      ['JetBrains Support', '✓', '✓'],
-      ['NVIM Support', '✓', '✓'],
-      ['Models Supported', 'GPT-4o, Claude 3.5', 'Multiple AI models'],
-      ['Pricing', 'Free to Pro Ultimate', 'Open Source Free']
+      ['JetBrains Support', '✗', '✓'],
+      ['NVIM Support', '✗', '✗'],
+      ['Models Supported', 'GPT-4o, Claude 3.5', 'Universal and Custom Models'],
+      ['Pricing', 'Free, Pro $15/mo, Ultimate $39/mo', 'Free tier + Enterprise plans']
    ]
 
 ## Code Completion
