--- a/others/comparing-qodo-vs-continue.mdx
+++ b/others/comparing-qodo-vs-continue.mdx
@@ -15,21 +15,21 @@ As AI-powered development tools continue to reshape how we write code, Qodo Gen 
 ## Feature Comparison
 
 [
-    ['Terminal integration', '✓', '✓'],
+    ['Terminal integration', '✗', '✗'],
     ['Tab completion', '✓', '✓'],
     ['Language agnostic', '✓', '✓'],
-    ['API access', '✓', '✗'],
+    ['API access', '✗', '✓'],
     ['Self hostable', '✗', '✓'],
-    ['Test generation', '✓', '✓'],
+    ['Test generation', '✓', '✗'],
     ['Real-time completions', '✓', '✓'],
-    ['Usage analytics', '✓', '✗'],
+    ['Usage analytics', '✗', '✗'],
     ['Explanations/Chat', '✓', '✓'],
     ['Full codebase context', '✓', '✓'],
     ['VS Code Support', '✓', '✓'],
     ['JetBrains Support', '✓', '✓'],
-    ['NVIM Support', '✗', '✓'],
-    ['Models Supported', 'GPT-4, Claude, Gemini', 'Multiple AI models'],
-    ['Pricing', 'Free and Pro tiers', 'Free open-source']
+    ['NVIM Support', '✗', '✗'],
+    ['Models Supported', 'GPT-4, Claude 3.5, Gemini', 'Universal and Custom Models'],
+    ['Pricing', 'Free, Team $19/mo, Enterprise', 'Free tier + Enterprise plans']
 ]
 
 ## Code Completion
