--- a/tabnine/comparing-tabnine-vs-qodo.mdx
+++ b/tabnine/comparing-tabnine-vs-qodo.mdx
@@ -15,21 +15,21 @@ As AI-powered development tools continue to reshape how we write code, Tabnine a
 ## Feature Comparison
 
 [
-    ['Terminal integration', '✓', '✓'],
-    ['Tab completion', '✓', '✗'],
+    ['Terminal integration', '✗', '✗'],
+    ['Tab completion', '✓', '✓'],
     ['Language agnostic', '✓', '✓'],
-    ['API access', '✓', '✓'],
-    ['Self hostable', '✓', '✓'],
-    ['Test generation', '✗', '✓'],
+    ['API access', '✗', '✗'],
+    ['Self hostable', '✓', '✗'],
+    ['Test generation', '✓', '✓'],
     ['Real-time completions', '✓', '✓'],
-    ['Usage analytics', '✓', '✓'],
+    ['Usage analytics', '✗', '✗'],
     ['Explanations/Chat', '✓', '✓'],
     ['Full codebase context', '✓', '✓'],
     ['VS Code Support', '✓', '✓'],
     ['JetBrains Support', '✓', '✓'],
     ['NVIM Support', '✓', '✗'],
-    ['Models Supported', 'Private Universal Models', 'GPT-4, Claude, Gemini'],
-    ['Pricing', 'Free to Enterprise', 'Free and Pro tiers']
+    ['Models Supported', 'Universal and Custom Models', 'GPT-4, Claude 3.5, Gemini'],
+    ['Pricing', 'Free tier + Enterprise $39/mo', 'Free, Team $19/mo, Enterprise']
 ]
 
 ## Code Completion
