--- a/devin/comparing-codeium-vs-devin.mdx
+++ b/devin/comparing-codeium-vs-devin.mdx
@@ -28,8 +28,8 @@ As AI-powered development tools continue to reshape how we write code, Codeium a
     ['VS Code Support', '✓', '✓'],
     ['JetBrains Support', '✗', 'N/A'],
     ['NVIM Support', '✗', 'N/A'],
-    ['Models Supported', 'OpenAI Codex Based', 'GPT-4o, Claude 3.5'],
-    ['Pricing', 'From $10/month individual', 'Team-based pricing']
+    ['Models Supported', 'GPT-4o, Claude 3.5', 'Custom Cognition Models'],
+    ['Pricing', 'From $10/month individual', 'Team $500/mo, Enterprise']
 ]
 
 ## Code Completion
