--- a/devin/comparing-qodo-vs-devin.mdx
+++ b/devin/comparing-qodo-vs-devin.mdx
@@ -29,7 +29,7 @@ As AI-powered development tools continue to reshape how we write code, Qodo Gen 
     ['JetBrains Support', '✓', 'N/A'],
     ['NVIM Support', '✗', 'N/A'],
     ['Models Supported', 'GPT-4, Claude 3.5, Gemini', 'Custom Cognition Models'],
-    ['Pricing', 'From $10/month individual', 'Team-based pricing']
+    ['Pricing', 'From $10/month individual', 'Team $500/mo, Enterprise']
 ]
 
 ## Code Completion
