--- a/devin/comparing-replit-vs-devin.mdx
+++ b/devin/comparing-replit-vs-devin.mdx
@@ -27,7 +27,7 @@ As AI-powered development tools continue to reshape how we write code, Replit an
     ['Full codebase context', '✓', '✗'],
     ['VS Code Support', '✗', '✓'],
     ['Models Supported', 'Claude 3.5, GPT-4o', 'Custom Cognition Models'],
-    ['Pricing', 'Free, Core $15/mo', 'Team-based pricing']
+    ['Pricing', 'Free, Core $15/mo', 'Team $500/mo, Enterprise']
 ]
 
 ## Code Completion
