--- a/devin/comparing-continue-vs-devin.mdx
+++ b/devin/comparing-continue-vs-devin.mdx
@@ -29,7 +29,7 @@ As AI-powered development tools continue to reshape how we write code, Continue 
     ['JetBrains Support', '✓', 'N/A'],
     ['NVIM Support', '✗', 'N/A'],
     ['Models Supported', 'Universal and Custom Models', 'Custom Cognition Models'],
-    ['Pricing', 'Free tier + Enterprise plans', 'Team-based pricing']
+    ['Pricing', 'Free tier + Enterprise plans', 'Team $500/mo, Enterprise']
 ]
 
 ## Code Completion
