--- a/devin/comparing-copilot-vs-devin.mdx
+++ b/devin/comparing-copilot-vs-devin.mdx
@@ -29,7 +29,7 @@ As AI-powered development tools continue to reshape how we write code, GitHub Co
     ['JetBrains Support', '✓', 'N/A'],
     ['NVIM Support', '✓', 'N/A'],
     ['Models Supported', 'GPT-4, Custom Models', 'Custom Cognition Models'],
-    ['Pricing', 'Individual $10/mo, Business $19/mo, Enterprise', 'Team-based pricing']
+    ['Pricing', 'Individual $10/mo, Business $19/mo, Enterprise', 'Team $500/mo, Enterprise']
 ]
 
 ## Code Completion
