--- a/devin/comparing-cursor-vs-devin.mdx
+++ b/devin/comparing-cursor-vs-devin.mdx
@@ -29,7 +29,7 @@ As AI-powered development tools continue to reshape how we write code, Cursor an
       ['JetBrains Support', '✗', 'N/A'],
       ['NVIM Support', '✗', 'N/A'],
       ['Models Supported', 'GPT-4, Claude, Custom', 'Custom Cognition Models'],
-      ['Pricing', 'Free tier + Pro $20/mo', 'Team-based pricing']
+      ['Pricing', 'Free tier + Pro $20/mo', 'Team $500/mo, Enterprise']
    ]
 
 ## Code Completion
