--- a/devin/comparing-tabnine-vs-devin.mdx
+++ b/devin/comparing-tabnine-vs-devin.mdx
@@ -29,7 +29,7 @@ As AI-powered development tools continue to reshape how we write code, Tabnine a
     ['JetBrains Support', '✓', 'N/A'],
     ['NVIM Support', '✓', 'N/A'],
     ['Models Supported', 'Universal and Custom Models', 'Custom Cognition Models'],
-    ['Pricing', 'Free tier + Enterprise $39/mo', 'Team-based pricing']
+    ['Pricing', 'Free tier + Enterprise $39/mo', 'Team $500/mo, Enterprise']
 ]
 
 ## Code Completion
