--- a/devin/comparing-cody-vs-devin.mdx
+++ b/devin/comparing-cody-vs-devin.mdx
@@ -7,7 +7,7 @@ summary: 'A comprehensive comparison between Sourcegraph Cody and Devin, two lea
 keywords: 'Sourcegraph Cody, Devin, AI coding assistant, code generation, developer tools, IDE integration, code completion, AI programming'
 metaTitle: 'Sourcegraph Cody vs Devin: The Ultimate AI Code Assistant Comparison (2025)'
 metaDescription: 'Compare Sourcegraph Cody and Devin - two powerful AI coding assistants. Learn about their features, pricing, and capabilities to choose the right tool for your development needs.'
-canonicalUrl: ''
+canonicalUrl: 'https://www.greptile.com/blog/comparing-cody-vs-devin'
 ---
 
 As AI-powered development tools continue to reshape how we write code, Sourcegraph Cody and Devin stand out as two prominent solutions in the market. Both tools offer comprehensive AI assistance for developers, but Devin distinguishes itself with autonomous capabilities while Cody focuses on enhanced context-aware assistance. This comparison will help you understand the key differences and make an informed decision for your development needs.
